QtBeef/src/Qt/qtextformat.bf

class QTextFrameFormat : IQTextFrameFormat, IQTextFormat
{
	private QTextFrameFormat_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTextFrameFormat_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QTextFrameFormat_new();
	}
	public this(IQTextFrameFormat param1)
	{
		this.ptr = CQt.QTextFrameFormat_new2((.)param1?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QTextFrameFormat_Delete(this.ptr);
	}
	public bool IsValid()
	{
		return CQt.QTextFrameFormat_IsValid((.)this.ptr.Ptr);
	}
	public void SetPosition(QTextFrameFormat_Position f)
	{
		CQt.QTextFrameFormat_SetPosition((.)this.ptr.Ptr, f);
	}
	public QTextFrameFormat_Position Position()
	{
		return CQt.QTextFrameFormat_Position((.)this.ptr.Ptr);
	}
	public void SetBorder(double border)
	{
		CQt.QTextFrameFormat_SetBorder((.)this.ptr.Ptr, border);
	}
	public double Border()
	{
		return CQt.QTextFrameFormat_Border((.)this.ptr.Ptr);
	}
	public void SetBorderBrush(IQBrush brush)
	{
		CQt.QTextFrameFormat_SetBorderBrush((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr BorderBrush()
	{
		return QBrush_Ptr(CQt.QTextFrameFormat_BorderBrush((.)this.ptr.Ptr));
	}
	public void SetBorderStyle(QTextFrameFormat_BorderStyle style)
	{
		CQt.QTextFrameFormat_SetBorderStyle((.)this.ptr.Ptr, style);
	}
	public QTextFrameFormat_BorderStyle BorderStyle()
	{
		return CQt.QTextFrameFormat_BorderStyle((.)this.ptr.Ptr);
	}
	public void SetMargin(double margin)
	{
		CQt.QTextFrameFormat_SetMargin((.)this.ptr.Ptr, margin);
	}
	public double Margin()
	{
		return CQt.QTextFrameFormat_Margin((.)this.ptr.Ptr);
	}
	public void SetTopMargin(double margin)
	{
		CQt.QTextFrameFormat_SetTopMargin((.)this.ptr.Ptr, margin);
	}
	public double TopMargin()
	{
		return CQt.QTextFrameFormat_TopMargin((.)this.ptr.Ptr);
	}
	public void SetBottomMargin(double margin)
	{
		CQt.QTextFrameFormat_SetBottomMargin((.)this.ptr.Ptr, margin);
	}
	public double BottomMargin()
	{
		return CQt.QTextFrameFormat_BottomMargin((.)this.ptr.Ptr);
	}
	public void SetLeftMargin(double margin)
	{
		CQt.QTextFrameFormat_SetLeftMargin((.)this.ptr.Ptr, margin);
	}
	public double LeftMargin()
	{
		return CQt.QTextFrameFormat_LeftMargin((.)this.ptr.Ptr);
	}
	public void SetRightMargin(double margin)
	{
		CQt.QTextFrameFormat_SetRightMargin((.)this.ptr.Ptr, margin);
	}
	public double RightMargin()
	{
		return CQt.QTextFrameFormat_RightMargin((.)this.ptr.Ptr);
	}
	public void SetPadding(double padding)
	{
		CQt.QTextFrameFormat_SetPadding((.)this.ptr.Ptr, padding);
	}
	public double Padding()
	{
		return CQt.QTextFrameFormat_Padding((.)this.ptr.Ptr);
	}
	public void SetWidth(double width)
	{
		CQt.QTextFrameFormat_SetWidth((.)this.ptr.Ptr, width);
	}
	public void SetWidth2(IQTextLength length)
	{
		CQt.QTextFrameFormat_SetWidth2((.)this.ptr.Ptr, (.)length?.ObjectPtr);
	}
	public QTextLength_Ptr Width()
	{
		return QTextLength_Ptr(CQt.QTextFrameFormat_Width((.)this.ptr.Ptr));
	}
	public void SetHeight(double height)
	{
		CQt.QTextFrameFormat_SetHeight((.)this.ptr.Ptr, height);
	}
	public void SetHeight2(IQTextLength height)
	{
		CQt.QTextFrameFormat_SetHeight2((.)this.ptr.Ptr, (.)height?.ObjectPtr);
	}
	public QTextLength_Ptr Height()
	{
		return QTextLength_Ptr(CQt.QTextFrameFormat_Height((.)this.ptr.Ptr));
	}
	public void SetPageBreakPolicy(void* flags)
	{
		CQt.QTextFrameFormat_SetPageBreakPolicy((.)this.ptr.Ptr, flags);
	}
	public void* PageBreakPolicy()
	{
		return CQt.QTextFrameFormat_PageBreakPolicy((.)this.ptr.Ptr);
	}
	public void Swap(IQTextFormat other)
	{
		CQt.QTextFormat_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public void Merge(IQTextFormat other)
	{
		CQt.QTextFormat_Merge((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public bool IsEmpty()
	{
		return CQt.QTextFormat_IsEmpty((.)this.ptr.Ptr);
	}
	public c_int Type()
	{
		return CQt.QTextFormat_Type((.)this.ptr.Ptr);
	}
	public c_int ObjectIndex()
	{
		return CQt.QTextFormat_ObjectIndex((.)this.ptr.Ptr);
	}
	public void SetObjectIndex(c_int object)
	{
		CQt.QTextFormat_SetObjectIndex((.)this.ptr.Ptr, object);
	}
	public QVariant_Ptr Property(c_int propertyId)
	{
		return QVariant_Ptr(CQt.QTextFormat_Property((.)this.ptr.Ptr, propertyId));
	}
	public void SetProperty(c_int propertyId, IQVariant value)
	{
		CQt.QTextFormat_SetProperty((.)this.ptr.Ptr, propertyId, (.)value?.ObjectPtr);
	}
	public void ClearProperty(c_int propertyId)
	{
		CQt.QTextFormat_ClearProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool HasProperty(c_int propertyId)
	{
		return CQt.QTextFormat_HasProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool BoolProperty(c_int propertyId)
	{
		return CQt.QTextFormat_BoolProperty((.)this.ptr.Ptr, propertyId);
	}
	public c_int IntProperty(c_int propertyId)
	{
		return CQt.QTextFormat_IntProperty((.)this.ptr.Ptr, propertyId);
	}
	public double DoubleProperty(c_int propertyId)
	{
		return CQt.QTextFormat_DoubleProperty((.)this.ptr.Ptr, propertyId);
	}
	public void StringProperty(String outStr, c_int propertyId)
	{
		CQt.QTextFormat_StringProperty((.)this.ptr.Ptr, propertyId);
	}
	public QColor_Ptr ColorProperty(c_int propertyId)
	{
		return QColor_Ptr(CQt.QTextFormat_ColorProperty((.)this.ptr.Ptr, propertyId));
	}
	public QPen_Ptr PenProperty(c_int propertyId)
	{
		return QPen_Ptr(CQt.QTextFormat_PenProperty((.)this.ptr.Ptr, propertyId));
	}
	public QBrush_Ptr BrushProperty(c_int propertyId)
	{
		return QBrush_Ptr(CQt.QTextFormat_BrushProperty((.)this.ptr.Ptr, propertyId));
	}
	public QTextLength_Ptr LengthProperty(c_int propertyId)
	{
		return QTextLength_Ptr(CQt.QTextFormat_LengthProperty((.)this.ptr.Ptr, propertyId));
	}
	public void* LengthVectorProperty(c_int propertyId)
	{
		return CQt.QTextFormat_LengthVectorProperty((.)this.ptr.Ptr, propertyId);
	}
	public void SetProperty2(c_int propertyId, void** lengths)
	{
		CQt.QTextFormat_SetProperty2((.)this.ptr.Ptr, propertyId, lengths);
	}
	public void* Properties()
	{
		return CQt.QTextFormat_Properties((.)this.ptr.Ptr);
	}
	public c_int PropertyCount()
	{
		return CQt.QTextFormat_PropertyCount((.)this.ptr.Ptr);
	}
	public void SetObjectType(c_int type)
	{
		CQt.QTextFormat_SetObjectType((.)this.ptr.Ptr, type);
	}
	public c_int ObjectType()
	{
		return CQt.QTextFormat_ObjectType((.)this.ptr.Ptr);
	}
	public bool IsCharFormat()
	{
		return CQt.QTextFormat_IsCharFormat((.)this.ptr.Ptr);
	}
	public bool IsBlockFormat()
	{
		return CQt.QTextFormat_IsBlockFormat((.)this.ptr.Ptr);
	}
	public bool IsListFormat()
	{
		return CQt.QTextFormat_IsListFormat((.)this.ptr.Ptr);
	}
	public bool IsFrameFormat()
	{
		return CQt.QTextFormat_IsFrameFormat((.)this.ptr.Ptr);
	}
	public bool IsImageFormat()
	{
		return CQt.QTextFormat_IsImageFormat((.)this.ptr.Ptr);
	}
	public bool IsTableFormat()
	{
		return CQt.QTextFormat_IsTableFormat((.)this.ptr.Ptr);
	}
	public bool IsTableCellFormat()
	{
		return CQt.QTextFormat_IsTableCellFormat((.)this.ptr.Ptr);
	}
	public QTextBlockFormat_Ptr ToBlockFormat()
	{
		return QTextBlockFormat_Ptr(CQt.QTextFormat_ToBlockFormat((.)this.ptr.Ptr));
	}
	public QTextCharFormat_Ptr ToCharFormat()
	{
		return QTextCharFormat_Ptr(CQt.QTextFormat_ToCharFormat((.)this.ptr.Ptr));
	}
	public QTextListFormat_Ptr ToListFormat()
	{
		return QTextListFormat_Ptr(CQt.QTextFormat_ToListFormat((.)this.ptr.Ptr));
	}
	public QTextTableFormat_Ptr ToTableFormat()
	{
		return QTextTableFormat_Ptr(CQt.QTextFormat_ToTableFormat((.)this.ptr.Ptr));
	}
	public QTextFrameFormat_Ptr ToFrameFormat()
	{
		return QTextFrameFormat_Ptr(CQt.QTextFormat_ToFrameFormat((.)this.ptr.Ptr));
	}
	public QTextImageFormat_Ptr ToImageFormat()
	{
		return QTextImageFormat_Ptr(CQt.QTextFormat_ToImageFormat((.)this.ptr.Ptr));
	}
	public QTextTableCellFormat_Ptr ToTableCellFormat()
	{
		return QTextTableCellFormat_Ptr(CQt.QTextFormat_ToTableCellFormat((.)this.ptr.Ptr));
	}
	public void SetLayoutDirection(Qt_LayoutDirection direction)
	{
		CQt.QTextFormat_SetLayoutDirection((.)this.ptr.Ptr, direction);
	}
	public Qt_LayoutDirection LayoutDirection()
	{
		return CQt.QTextFormat_LayoutDirection((.)this.ptr.Ptr);
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QTextFormat_SetBackground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QTextFormat_Background((.)this.ptr.Ptr));
	}
	public void ClearBackground()
	{
		CQt.QTextFormat_ClearBackground((.)this.ptr.Ptr);
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QTextFormat_SetForeground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QTextFormat_Foreground((.)this.ptr.Ptr));
	}
	public void ClearForeground()
	{
		CQt.QTextFormat_ClearForeground((.)this.ptr.Ptr);
	}
}
interface IQTextFrameFormat : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextTableFormat
// --------------------------------------------------------------
[CRepr]
struct QTextTableFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextTableFormat_new")]
	public static extern QTextTableFormat_Ptr QTextTableFormat_new();
	[LinkName("QTextTableFormat_Delete")]
	public static extern void QTextTableFormat_Delete(QTextTableFormat_Ptr self);
	[LinkName("QTextTableFormat_IsValid")]
	public static extern bool QTextTableFormat_IsValid(void* self);
	[LinkName("QTextTableFormat_Columns")]
	public static extern c_int QTextTableFormat_Columns(void* self);
	[LinkName("QTextTableFormat_SetColumns")]
	public static extern void QTextTableFormat_SetColumns(void* self, c_int columns);
	[LinkName("QTextTableFormat_SetColumnWidthConstraints")]
	public static extern void QTextTableFormat_SetColumnWidthConstraints(void* self, void** constraints);
	[LinkName("QTextTableFormat_ColumnWidthConstraints")]
	public static extern void* QTextTableFormat_ColumnWidthConstraints(void* self);
	[LinkName("QTextTableFormat_ClearColumnWidthConstraints")]
	public static extern void QTextTableFormat_ClearColumnWidthConstraints(void* self);
	[LinkName("QTextTableFormat_CellSpacing")]
	public static extern double QTextTableFormat_CellSpacing(void* self);
	[LinkName("QTextTableFormat_SetCellSpacing")]
	public static extern void QTextTableFormat_SetCellSpacing(void* self, double spacing);
	[LinkName("QTextTableFormat_CellPadding")]
	public static extern double QTextTableFormat_CellPadding(void* self);
	[LinkName("QTextTableFormat_SetCellPadding")]
	public static extern void QTextTableFormat_SetCellPadding(void* self, double padding);
	[LinkName("QTextTableFormat_SetAlignment")]
	public static extern void QTextTableFormat_SetAlignment(void* self, void* alignment);
	[LinkName("QTextTableFormat_Alignment")]
	public static extern void* QTextTableFormat_Alignment(void* self);
	[LinkName("QTextTableFormat_SetHeaderRowCount")]
	public static extern void QTextTableFormat_SetHeaderRowCount(void* self, c_int count);
	[LinkName("QTextTableFormat_HeaderRowCount")]
	public static extern c_int QTextTableFormat_HeaderRowCount(void* self);
	[LinkName("QTextTableFormat_SetBorderCollapse")]
	public static extern void QTextTableFormat_SetBorderCollapse(void* self, bool borderCollapse);
	[LinkName("QTextTableFormat_BorderCollapse")]
	public static extern bool QTextTableFormat_BorderCollapse(void* self);
}
